--- a/frontend/src/bootstrap.css
+++ b/frontend/src/bootstrap.css
@@ -4956,7 +4956,7 @@ input[type='button'].btn-block {
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link:focus {
   /* color: #fff; BILLT */
-  color: var(--yellow);
+  color: #fed815;
 }
 
 .navbar-dark .navbar-nav .nav-link.disabled {
@@ -4968,7 +4968,7 @@ input[type='button'].btn-block {
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .nav-link.active {
   /* color: #fff; BILLT*/
-  color: var(--yellow);
+  color: #fed815;
 }
 
 .navbar-dark .navbar-toggler {
