--- a/frontend/src/styles/HomeScreen.css
+++ b/frontend/src/styles/HomeScreen.css
@@ -49,12 +49,13 @@
 }
 
 .homePage .topBrands {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     135deg,
     rgba(219, 31, 39, 1),
     rgba(219, 31, 39, 0.7)
-  );
-  /* background-color: #db1f27; */
+  ); */
+
+  background-color: #db1f27;
   padding: 0px 0px 0px;
   /* margin: 0px !important; */
   width: 100vw;
@@ -102,6 +103,33 @@
   max-width: 100vw;
   /* height: 350px; */
 }
-.homePage .location p {
-  margin-bottom: 0px;
+
+/* .redTextHover:hover {
+  background-color: purple;
+  color: #db1f27 !important;
+} */
+
+h5.redTextHover {
+  /* background-color: #cbcdce; */
+  opacity: 0.9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 250px;
+  width: 200px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  border: none;
+  /* color: white; */
+  padding-top: 220px;
+}
+h5.redTextHover:hover {
+  color: #db1f27;
+}
+
+.yellowBorderHover:hover {
+  border: 10px solid #fed815;
+  box-sizing: border-box;
+  width: 100%;
 }
