--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 html,
 body,
 #root {
+  scroll-behavior: smooth;
   height: 100%;
 }
 #root {
@@ -85,6 +86,11 @@ p {
 }
 .carousel a {
   margin: 0 auto;
+}
+
+.textShadow:hover {
+  text-shadow: 0 0 1px #db1f27, 0 0 1px #db1f27, 0 0 1px #db1f27,
+    0 0 1px #db1f27;
 }
 
 @media (max-width: 900px) {
