--- a/frontend/src/styles/HomeScreen.css
+++ b/frontend/src/styles/HomeScreen.css
@@ -26,7 +26,7 @@
   background-size: cover;
   padding: 100px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
+  /* width: 100vw; */
   max-width: 100vw;
 }
 
@@ -43,8 +43,8 @@
   background-size: cover;
   padding: 0px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
   padding-top: 60px;
 }
 
@@ -58,18 +58,18 @@
   background-color: #db1f27;
   padding: 0px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
 }
 
 .homePage .seeDave {
   /* background-color: lightgrey; */
   background-position: center;
   background-size: cover;
-  padding: 150px 0px 0px;
+  /* padding: 150px 0px 0px; */
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
 }
 
 .homePage .favorites {
@@ -77,8 +77,8 @@
   background-size: cover;
   padding: 20px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
 }
 .homePage .favoriteText {
   /* height: 120px; */
@@ -90,8 +90,8 @@
   background-size: cover;
   padding: 20px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
   height: 350px;
 }
 .homePage .location {
@@ -99,8 +99,8 @@
   background-size: cover;
   padding: 50px 0px 0px;
   /* margin: 0px !important; */
-  width: 100vw;
-  max-width: 100vw;
+  /* width: 100vw;
+  max-width: 100vw; */
   /* height: 350px; */
 }
 
